Setting mid-column to 0% to prevent weird gap

--- a/src/styles/lobby-hero.module.scss
+++ b/src/styles/lobby-hero.module.scss
@@ -27,8 +27,8 @@ div.column:first-of-type {
   }
 
   .mid-column {
-    width: 5%;
-    background-color: $color_secondary;
+    width: 0%;
+    background-color: $color_secondary_contrast;
     transform: skew(-25deg);
     margin-left: -2%;
     z-index: 2;
